data/derived/fa15/progs/unify/prog3404.ml.out
Characters 77-78:
  |h::t -> [remainder x y] @ mulByDigit i t;;
                      ^
Error: This expression has type 'a -> int list -> string list
       but an expression was expected of type int
